# lib/api-spec/openapi.yaml
@@ -196,6 +196,16 @@ components:
       properties:
         content:
           type: string
+        model:
+          type: string
+        maxTokens:
+          type: ["integer", "null"]
+        temperature:
+          type: ["number", "null"]
+        apiKey:
+          type: ["string", "null"]
+        apiUrl:
+          type: ["string", "null"]
       required:
         - content
     OpenrouterConversationWithMessages:
